crates/roomrs/tests/ui/fail/dao_update_without_returning.stderr
error: #[update]/#[delete]의 비-u64 반환에는 SQL RETURNING 절이 필요합니다
 --> tests/ui/fail/dao_update_without_returning.rs:6:43
  |
6 |     fn update(&self, id: i64, value: i64) -> roomrs::Result<i64>;
  |                                           ^
